--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <link rel="stylesheet" href="/css/skills.css">
     <link rel="stylesheet" href="/css/footer.css">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/Assets/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
     <main class="main">
         <header class="Header">
-            <img src="/Assets/my-photo.jpg" alt="Foto de André Guilherme" class="photo">
+            <img src="Assets/my-photo.jpg" alt="Foto de André Guilherme" class="photo">
             <h1 class="title">Olá, <br>eu sou André Guilherme</h1>
                 <div class="information">
                 <p class="job">Developer</p>
@@ -55,19 +55,19 @@
                         <h3>Ferramentas:</h3>
                         <ul>
                             <li>
-                                <img src="/Assets/icons/languages-skills/javascript.svg" 
+                                <img src="Assets/icons/languages-skills/javascript.svg" 
                                 alt="JavaScript" title="JavaScript">
                             </li>
                             <li>
-                                <img src="/Assets/icons/languages-skills/angular.svg" 
+                                <img src="Assets/icons/languages-skills/angular.svg" 
                                 alt="Angular" title="Angular">
                             </li>
                             <li>
-                                <img src="/Assets/icons/languages-skills/java.svg" 
+                                <img src="Assets/icons/languages-skills/java.svg" 
                                 alt="Java" title="Java">
                             </li>
                             <li>
-                                <img src="/Assets/icons/languages-skills/python.svg"
+                                <img src="Assets/icons/languages-skills/python.svg"
                                  alt="Python" title="Python">
                             </li>
                         </ul>
@@ -154,12 +154,12 @@
 <!-- Footer -->
     <footer>
         <a href="https://www.dio.me/" target="_blank">
-            <img src="/Assets/icons/dio-logo.svg" alt="DIO">
+            <img src="Assets/icons/dio-logo.svg" alt="DIO">
         </a>
     </footer>
 </main>
 
 <!-- JS -->
-<script src="/Assets/js/acordeon.js"></script>
+<script src="Assets/js/acordeon.js"></script>
 </body>
 </html>
